--- a/Real/MZI_Real.ipynb
+++ b/Real/MZI_Real.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -73,14 +73,17 @@
      "output_type": "stream",
      "text": [
       "ΔL = 552.82μm\n",
-      "Comprimento maior = 572.82μm\n",
-      "Comprimento menor = 20.00μm\n",
+      "Comprimento maior = 662.82μm\n",
+      "Comprimento menor = 110.00μm\n",
+      "\n",
       "ΔL = 55.28μm\n",
-      "Comprimento maior = 75.28μm\n",
-      "Comprimento menor = 20.00μm\n",
+      "Comprimento maior = 165.28μm\n",
+      "Comprimento menor = 110.00μm\n",
+      "\n",
       "ΔL = 27.64μm\n",
-      "Comprimento maior = 47.64μm\n",
-      "Comprimento menor = 20.00μm\n"
+      "Comprimento maior = 137.64μm\n",
+      "Comprimento menor = 110.00μm\n",
+      "\n"
      ]
     }
    ],
@@ -88,15 +91,49 @@
     "ng = 4.3458796\n",
     "FSR = [1*nm, 10*nm, 20*nm]\n",
     "\n",
-    "L1 = np.zeros(len(FSR))\n",
+    "L1 = 110*um\n",
     "L2 = np.zeros(len(FSR))\n",
     "\n",
     "for i in range (len(FSR)):\n",
     "    d_L = valor_lambda**2/(ng*FSR[i])\n",
-    "    L1[i] = 20*um\n",
-    "    L2[i] = L1[i] + d_L\n",
+    "    L2[i] = L1 + d_L\n",
     "\n",
-    "    print(f'\\u0394L = {d_L/um:.2f}\\u03BCm\\nComprimento maior = {L2[i]/um:.2f}\\u03BCm\\nComprimento menor = {L1[i]/um:.2f}\\u03BCm')"
+    "    print(f'\\u0394L = {d_L/um:.2f}\\u03BCm\\nComprimento maior = {L2[i]/um:.2f}\\u03BCm\\nComprimento menor = {L1/um:.2f}\\u03BCm\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Comprimento horizontal = 30.00μm\n",
+      "Comprimento do raio = 5.00μm\n",
+      "Comprimento vertical = 271.41μm\n",
+      "\n",
+      "Comprimento horizontal = 30.00μm\n",
+      "Comprimento do raio = 5.00μm\n",
+      "Comprimento vertical = 22.64μm\n",
+      "\n",
+      "Comprimento horizontal = 30.00μm\n",
+      "Comprimento do raio = 5.00μm\n",
+      "Comprimento vertical = 8.82μm\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "Lv = np.zeros(len(FSR))\n",
+    "radiu = 5*um\n",
+    "\n",
+    "for i in range (len(FSR)):\n",
+    "    d_L = valor_lambda**2/(ng*FSR[i])\n",
+    "    Lv[i] = (L2[i] - 4*(L1-4*radiu)/3)/2\n",
+    "\n",
+    "    print(f'Comprimento horizontal = {((L1-4*radiu)/3)/um:.2f}\\u03BCm\\nComprimento do raio = {radiu/um:.2f}\\u03BCm\\nComprimento vertical = {Lv[i]/um:.2f}\\u03BCm\\n')"
    ]
   },
   {
@@ -716,7 +753,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
