--- a/Ideal/MZI_Ideal.ipynb
+++ b/Ideal/MZI_Ideal.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,6 +39,8 @@
     "start_wavelenth = 1500*nm\n",
     "stop_wavelenth = 1600*nm\n",
     "number_point = 1000\n",
+    "\n",
+    "neff = 2.35317\n",
     "\n",
     "file = 'MZI_Ideal'"
    ]
